output.txt
g013.anvil.rcac.purdue.edu
Fri Apr 28 16:33:23 2023       
+-----------------------------------------------------------------------------+
| NVIDIA-SMI 525.85.12    Driver Version: 525.85.12    CUDA Version: 12.0     |
|-------------------------------+----------------------+----------------------+
| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |
| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |
|                               |                      |               MIG M. |
|===============================+======================+======================|
|   0  NVIDIA A100-SXM...  On   | 00000000:41:00.0 Off |                    0 |
| N/A   30C    P0    56W / 400W |      0MiB / 40960MiB |      0%      Default |
|                               |                      |             Disabled |
+-------------------------------+----------------------+----------------------+
                                                                               
+-----------------------------------------------------------------------------+
| Processes:                                                                  |
|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |
|        ID   ID                                                   Usage      |
|=============================================================================|
|  No running processes found                                                 |
+-----------------------------------------------------------------------------+

Currently Loaded Modules:
  1) modtree/gpu            5) mpfr/4.0.2    9) numactl/2.0.14
  2) nccl/cuda-11.2_2.8.4   6) mpc/1.1.0    10) cuda/11.4.2
  3) cudnn/cuda-11.2_8.1    7) gcc/11.2.0   11) openmpi/4.0.6
  4) gmp/6.2.1              8) zlib/1.2.11  12) boost/1.74.0

 

Consolidate compiler generated dependencies of target context
Consolidate compiler generated dependencies of target parallel
Consolidate compiler generated dependencies of target core
[  4%] Built target context
[ 14%] Built target parallel
[ 19%] Built target core
Consolidate compiler generated dependencies of target cudahelp
[ 20%] Building CXX object CMakeFiles/cudahelp.dir/core/src/cuda/cuda_hybrid_parallel.cc.o
/home/x-jchen5/Mithril_MultiGPU/core/src/cuda/cuda_hybrid_parallel.cc: In member function 'void DistributedPIPHybridParallelExecutionEngineGPU::perform_backward_task(CUDAPIPBackwardTask)':
/home/x-jchen5/Mithril_MultiGPU/core/src/cuda/cuda_hybrid_parallel.cc:3974:16: error: 'class AbstractOperatorExecutor' has no member named 'enable_recomputation_mode'
 3974 |     executor_->enable_recomputation_mode();
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/x-jchen5/Mithril_MultiGPU/core/src/cuda/cuda_hybrid_parallel.cc:4022:16: error: 'class AbstractOperatorExecutor' has no member named 'disable_recomputation_mode'
 4022 |     executor_->disable_recomputation_mode();
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/cudahelp.dir/build.make:160: CMakeFiles/cudahelp.dir/core/src/cuda/cuda_hybrid_parallel.cc.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:251: CMakeFiles/cudahelp.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
The graph dataset locates at /anvil/projects/x-cis220117/gnn_datasets/reordered/arxiv
The number of GCNII layers: 32
The number of hidden units: 32
The number of training epoches: 500
The number of startup epoches: 0
Learning rate: 0.001000
The partition strategy: model
The dropout rate: 0.500
The checkpointed weight file: /anvil/projects/x-cis220117/saved_weights_pipe
The random seed: 13
The scaling down factor of out-of-chunk gradients: 0.100000
GCN hyper-parameter alpha: 0.100000
GCN hyper-parameter lambda: 0.500000
Initialized node 0 on machine g013.anvil.rcac.purdue.edu
gcnii: /home/x-jchen5/Mithril_MultiGPU/core/src/graph.cc:221: virtual void GraphStructureFullyReplicatedV2::load_from_file(std::string, std::string, std::string): Assertion `f != NULL' failed.
[g013:195582] *** Process received signal ***
[g013:195582] Signal: Aborted (6)
[g013:195582] Signal code:  (-6)
[g013:195582] [ 0] /lib64/libc.so.6(+0x4eb80)[0x146180826b80]
[g013:195582] [ 1] /lib64/libc.so.6(gsignal+0x10f)[0x146180826aff]
[g013:195582] [ 2] /lib64/libc.so.6(abort+0x127)[0x1461807f9ea5]
[g013:195582] [ 3] /lib64/libc.so.6(+0x21d79)[0x1461807f9d79]
[g013:195582] [ 4] /lib64/libc.so.6(+0x47456)[0x14618081f456]
[g013:195582] [ 5] /home/x-jchen5/Mithril_MultiGPU/build/libcore.so(_ZN31GraphStructureFullyReplicatedV214load_from_fileENSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEES5_S5_+0xbe6)[0x146199d29d16]
[g013:195582] [ 6] ./applications/async_multi_gpus/gcnii(_ZN24CUDAStructualGraphLoader20load_graph_structureENSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEES5_S5_+0x3cd)[0x4620ed]
[g013:195582] [ 7] ./applications/async_multi_gpus/gcnii(main+0xba2)[0x440502]
[g013:195582] [ 8] /lib64/libc.so.6(__libc_start_main+0xe5)[0x146180812d85]
[g013:195582] [ 9] ./applications/async_multi_gpus/gcnii(_start+0x2e)[0x44180e]
[g013:195582] *** End of error message ***
--------------------------------------------------------------------------
Primary job  terminated normally, but 1 process returned
a non-zero exit code. Per user-direction, the job has been aborted.
--------------------------------------------------------------------------
--------------------------------------------------------------------------
mpirun noticed that process rank 0 with PID 195582 on node g013 exited on signal 6 (Aborted).
--------------------------------------------------------------------------
